# African_News_Analyzer_Pipeline

./: .gitignore  Dockerfile  cloud.sh  docker-compose.yaml  feeds_config.py  pyproject.toml  readme.md  requirements.txt
config/: airflow.cfg
dags/: classification_dag.py  scrapping_dag.py  weekly_summary_dag.py
data/graphs/kg_pickles/: knowledge_graph_2025_06_21.gpickle  knowledge_graph_2025_06_22.gpickle  knowledge_graph_2025_06_23.gpickle  knowledge_graph_2025_06_29.gpickle  knowledge_graph_2026_04_19.gpickle
data/graphs/knowledge_visualization/: knowledge_graph.json
data/graphs/topics_visualization/: lda_visualization.html
fastapi/: Dockerfile  app.py  requirements.txt
fastapi/routes/: route_utils.py  routes.py
insight_africa/: Dockerfile  package-lock.json
insight_africa/src/components/: Hero.tsx
insight_africa/src/components/AboutPage/: AboutContent.tsx  IconGrid.tsx
insight_africa/src/components/WeeklyComparison/: CompareWeeklyMetrics.tsx
insight_africa/src/pages/: AboutPage.tsx  NewsDetailsPage.tsx  NewsPage.tsx  SearchResultPage.tsx
insight_africa/src/utils/: api.ts
kafka_producer/: ingest_feed.py  parser_utils.py
notebooks/: news-processing.ipynb
spark/: Dockerfile
spark_jobs/: build_KG.py  enhance_feeds.py  run_classification.py  run_summarization_and_topic.py
spark_jobs/utils/: date_utils.py  graph_helpers.py  processing_utils.py  prompts.py  spark_utils.py  topic_modeling_helpers.py
ui/insight_africa/: Dockerfile  default.conf  index.html  package.json
ui/insight_africa/src/: App.tsx
ui/insight_africa/src/utils/: api.ts
(+36 files in other folders)
